--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   app:
+    container_name: monolito_app 
     build: .
     ports:
       - "8080:80"
@@ -15,6 +16,7 @@ services:
     command: ["dotnet", "monolitoTaller.dll"]
 
   sqlserver:
+    container_name: monolito_sql
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
       SA_PASSWORD: "YourStrong!Passw0rd"
